--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
     </div>
   </main>
    <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0DST7ZSZX8"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0RQL76HHW8"></script>
   
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-0DST7ZSZX8');
+  gtag('config', 'G-0RQL76HHW8');
   document.addEventListener("DOMContentLoaded", () => {
     const cards = document.querySelectorAll(".action-card");
     cards.forEach((card, i) => {
