--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </footer>
   </header>
 <!-- พื้นหลังแบบใช้ div + CSS -->
-<div class="absolute inset-0 w-full h-full bg-cover bg-center -z-10" style="background-image: url('index.jpg');"></div>
+<div class="absolute inset-0 w-full h-full bg-cover bg-center -z-10" style="background-image: url('background.png');"></div>
   <main class="p-8 max-w-4xl mx-auto">
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-8">
       <!-- ปุ่ม 1: แปลภาษา -->
